--- a/src/app/gifs/result/result.component.html
+++ b/src/app/gifs/result/result.component.html
@@ -1,16 +1,17 @@
-<!-- <ul>
-  <li *ngFor="let gif of results">
-    {{gif.title}}
-  </li>
-</ul> -->
-
 <div class="row">
-  <div *ngFor="let gif of results" class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
-    <div class="card">
-      <img [src]="gif.images.downsized_medium.url" [alt]="gif.title" class="card-img-top"/>
+  <div
+    *ngFor="let gif of results"
+    class="col-md-4 col-sm-6 animate__animated animate__fadeIn"
+  >
+    <div class="card m-1">
+      <img
+        [src]="gif.images.downsized_medium.url"
+        [alt]="gif.title"
+        class="card-img-top"
+      />
       <div class="card-body">
         <p class="class-text">
-          {{gif.title}}
+          {{ gif.title }}
         </p>
       </div>
     </div>
